<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:text="@string/viewholder_id"
        android:textSize="14sp"
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textview_viewholder_id_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textColor="@color/color_black"
        android:textSize="14sp"
        tools:text="@string/viewholder_id" />

    <TextView
        android:text="@string/viewholder_city"
        android:textSize="14sp"
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textview_viewholder_city_text"
        android:textColor="@color/color_black"
        android:textSize="14sp"
        tools:text="Almaty"
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <TextView
        android:text="@string/viewholder_counry"
        android:textSize="14sp"
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textview_viewholder_country_text"
        android:textColor="@color/color_black"
        android:textSize="14sp"
        tools:text="kz"
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>